# docs/swagger.yaml
@@ -533,60 +533,15 @@ definitions:
       content:
         type: "string"
         example: "Lorem ipsum dolor"
-      materials:
-        type: "array"
-        xml:
-          name: "tag"
-          wrapped: true
-        items:
-          $ref: "#/definitions/Material"
       status:
         type: "string"
-        description: "pet status in the store"
+        description: "Lesson status in the store"
         enum:
           - "available"
           - "pending"
           - "sold"
     xml:
       name: "Pet"
-
-  Material:
-    type: "object"
-    required:
-      - "name"
-      - "photoUrls"
-    properties:
-      id:
-        type: "integer"
-        format: "int64"
-      order:
-        type: "integer"
-        format: "int64"
-      category:
-        $ref: "#/definitions/Category"
-      title:
-        type: "string"
-        example: "doggie"
-      content:
-        type: "string"
-        example: "Lorem ipsum dolor"
-      materials:
-        type: "array"
-        xml:
-          name: "tag"
-          wrapped: true
-        items:
-          $ref: "#/definitions/Material"
-      status:
-        type: "string"
-        description: "pet status in the store"
-        enum:
-          - "available"
-          - "pending"
-          - "sold"
-    xml:
-      name: "Pet"
-
 
   User:
     type: "object"
